versioned_docs/version-2025.2.5/professor/celina_de_oliveira_barbosa_gomes.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Celina de Oliveira Barbosa Gomes",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Língua Portuguesa e Literatura I - 2322",
          "size": 2,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "sala_7-2",
          "students": [
            "COM2025"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Língua Estrangeira: Inglês - 2329",
          "size": 1,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "sala_7-2",
          "students": [
            "COM2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Lingua Estrangeira Moderna 3 - Inglês - 230",
          "size": 1,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "sala_1-4",
          "students": [
            "EIN2022"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Língua Portuguesa e Literatura II - 2418",
          "size": 2,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "sala_14-2",
          "students": [
            "COM2024"
          ],
          "time": "08:20 - 09:10",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura II - 2418",
          "size": 2,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "sala_7-2",
          "students": [
            "COM2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Língua Estrangeira: Inglês - 2329",
          "size": 1,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "sala_7-2",
          "students": [
            "COM2025"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "Língua Estrangeira: Inglês - 2329",
          "size": 1,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "",
          "students": [
            "COM2026"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura I - 2322",
          "size": 2,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "",
          "students": [
            "COM2026"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Cultura e Identidade Brasileira - 2253",
          "size": 4,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "",
          "students": [
            "FPE2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Língua Portuguesa e Literatura III - 2461",
          "size": 2,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "sala_3-1",
          "students": [
            "COM2023"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura I - 2322",
          "size": 2,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "sala_7-2",
          "students": [
            "COM2025"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Língua Portuguesa e Literatura III - 2461",
          "size": 2,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "sala_14-2",
          "students": [
            "COM2024"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura II - 2418",
          "size": 2,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "sala_14-2",
          "students": [
            "COM2024"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura I - 2322",
          "size": 2,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "",
          "students": [
            "COM2026"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa para Estrangeiros - 2252",
          "size": 4,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "",
          "students": [
            "FPE2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Língua Portuguesa e Literatura II - 2418",
          "size": 2,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "sala_7-2",
          "students": [
            "COM2025"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Língua Estrangeira: Inglês - 2329",
          "size": 1,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "",
          "students": [
            "COM2026"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Celina de Oliveira Barbosa Gomes

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

<div style={{
  border: '1px solid #ddd',
  borderRadius: '8px',
  padding: '16px',
  marginTop: '24px',
  backgroundColor: '#f9f9f9'
}}>
  <h2 style={{
    borderBottom: '2px solid #ccc',
    paddingBottom: '8px',
    marginBottom: '16px'
  }}>Informações do Docente</h2>
  <p><strong>Cargo/Função:</strong> {data.teacherInfo.role}</p>
  <p><strong>Horário de Atendimento aos Alunos:</strong> {data.teacherInfo.officeHours}</p>
  <p><strong>Observações:</strong> {data.teacherInfo.notes}</p>
</div>

